# hpp-bezier-com-traj

./: .git-blame-ignore-revs  .gitignore  .gitlab-ci.yml  CMakeLists.txt  LICENSE  README.md  default.nix  flake.nix  package.xml  pyproject.toml
cmake2/: FindCDD.cmake  FindCLP.cmake  FindSpline.cmake  Findcentroidal-dynamics-lib.cmake  Findglpk.cmake  FindqpOASES.cmake
include/bezier-com-traj/: common_solve_methods.hh  common_solve_methods.inl  data.hh  definitions.hh  flags.hh  solve.hh  solve_end_effector.hh  utils.hh
include/bezier-com-traj/cost/: costfunction_definition.hh
include/bezier-com-traj/waypoints/: waypoints_c0_dc0_c1.hh  waypoints_c0_dc0_dc1.hh  waypoints_c0_dc0_dc1_c1.hh  waypoints_c0_dc0_ddc0.hh  waypoints_c0_dc0_ddc0_c1.hh  waypoints_c0_dc0_ddc0_dc1_c1.hh  waypoints_c0_dc0_ddc0_ddc1_dc1_c1.hh  waypoints_c0_dc0_ddc0_j0_j1_ddc1_dc1_c1.hh  waypoints_c0_dc0_ddc0_j0_x3_j1_ddc1_dc1_c1.hh  waypoints_c0_dc0_ddc0_j0_x5_j1_ddc1_dc1_c1.hh  waypoints_definition.hh
include/hpp/bezier-com-traj/: CMakeLists.txt  common_solve_methods.hh  common_solve_methods.inl  data.hh  definitions.hh  flags.hh  local_config.hh  solve.hh  solve_end_effector.hh  utils.hh
include/hpp/bezier-com-traj/cost/: CMakeLists.txt  costfunction_definition.hh
include/hpp/bezier-com-traj/solver/: CMakeLists.txt  eiquadprog-fast.hpp  glpk-wrapper.hpp  solver-abstract.hpp
include/hpp/bezier-com-traj/waypoints/: CMakeLists.txt  waypoints_c0_dc0_c1.hh  waypoints_c0_dc0_dc1.hh  waypoints_c0_dc0_dc1_c1.hh  waypoints_c0_dc0_ddc0.hh  waypoints_c0_dc0_ddc0_c1.hh  waypoints_c0_dc0_ddc0_dc1_c1.hh  waypoints_c0_dc0_ddc0_ddc1_dc1_c1.hh  waypoints_c0_dc0_ddc0_j0_j1_ddc1_dc1_c1.hh  waypoints_c0_dc0_ddc0_j0_x3_j1_ddc1_dc1_c1.hh  waypoints_c0_dc0_ddc0_j0_x5_j1_ddc1_dc1_c1.hh  waypoints_definition.hh
include/solver/: eiquadprog-fast.hpp  glpk-wrapper.hpp  solver-abstract.hpp
python/: CMakeLists.txt  bezier_com_traj.cpp  bezier_com_traj.cpp.autosave
python/test/: binding_tests.py  compare_pin_inv_dyn.py
src/: CMakeLists.txt  common_solve_methods.cpp  computeCOMTraj.cpp  costfunction_definition.cpp  eiquadprog-fast.cpp  glpk-wrapper.cpp  solve.cpp  solve_0_step.cpp  solve_end_effector.cpp  solve_transition.cpp  solver-abstract.cpp  utils.cpp  waypoints_definition.cpp
test/: CMakeLists.txt  test_static_equilibrium.cpp
tests/: CMakeLists.txt  test-bezier-symbolic.cc  test-bezier-symbolic.cpp  test-transition-quasi-static.cpp  test-transition-quasiStatic.cc  test-transition.cc  test-transition.cpp  test-zero-step-capturability.cpp  test_helper.hh  test_static_equilibrium.cpp
