<?xml version='1.0'?>
<package format='2'>
    <name>hpp-bezier-com-traj</name>
    <version>4.10.0</version>
    <description>Multi contact trajectory generation for the COM using Bezier curves</description>

    <maintainer email='guilhem.saurel@laas.fr'>Guilhem Saurel</maintainer>
    <license>BSD</license>

    <author>Pierre Fernbach</author>
    <author>Steve Tonneau</author>

    <buildtool_depend>catkin</buildtool_depend>
</package>
